--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
 </head>
 <body>
    <header>
-      <nav id="navbar">
+      <nav class="navbar">
          <h1 class="logo"><a href="index.html">SCH</a></h1>
          <ul id="nav-links">
-            <li #nav-home><a href="index.html">Home</a></li>
-            <li #nav-about><a href="about.html">About</a></li>
-            <li #nav-contact><a href="contact.html">Contact</a></li>
+            <li id="nav-home"><a href="index.html">Home</a></li>
+            <li id="nav-about" ><a id="current" href="about.html">About</a></li>
+            <li id="nav-contact" ><a href="contact.html">Contact</a></li>
          </ul>        
       </nav>
    </header>
@@ -33,19 +33,24 @@
 
   <div class="clr"></div>
 
-  <section id="testimonial-section">
-     <h3>What Our Guests Say</h3>
-     <div class="testimonial">
-        <div class="cust-img"></div>
-        <div></div>
-     </div>
-     <div class="testimonial">
-        <div></div>
-        <div></div>
-     </div>
-   </section>
+  <section id="testimonials">
+     <div class="test-container">
+        <h2>What Our Guests Say</h2>
+        <div class="testimonial bg-color">
+           <img src="./images/person-1.jpg" alt="person">
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad temporibus quidem incidunt obcaecati culpa, saepe dolor asperiores inventore voluptatum exercitationem numquam? Sit hic debitis enim, est optio alias perferendis.</p>
+        </div>
+        <div class="testimonial bg-color">
+         <img src="./images/person-2.jpg" alt="person2">
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius ad temporibus quidem incidunt obcaecati culpa, saepe dolor asperiores inventore voluptatum exercitationem numquam? Sit hic debitis enim, est optio alias perferendis.</p>
+      </div>
 
-   <footer class="footer">
+     </div>
+  </section>
+
+  <div class="clr"></div>
+
+  <footer class="footer">
       <p>Created by Sydni W 2020</p>
    </footer>
    
