--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
    <header>
-      <nav id="navbar">
+      <nav class="navbar">
          <h1 class="logo"><a href="index.html">SCH</a></h1>
          <ul id="nav-links">
-            <li #nav-home><a href="index.html">Home</a></li>
-            <li #nav-about><a href="about.html">About</a></li>
-            <li #nav-contact><a href="contact.html">Contact</a></li>
+            <li id="nav-home"><a id="current" href="index.html">Home</a></li>
+            <li id="nav-about" ><a href="about.html">About</a></li>
+            <li id="nav-contact" ><a href="contact.html">Contact</a></li>
          </ul>        
       </nav>
    </header>
@@ -26,7 +26,7 @@
          <div class="content">
             <h1><span>Enjoy</span> Your Stay</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam sapiente. Assumenda obcaecati autem sed.</p>
-            <button id="btn-about"><a href="about.html"></a>About Our Hotel</button>
+            <a class="btn bg-dark" id="btn-about" href="about.html">About Our Hotel</a>
          </div>
       </div>
    </div>
@@ -36,21 +36,21 @@
       <div class="info-content">
          <h3><span>The History</span> Of Our Hotel</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo quasi suscipit sunt tempore libero! Veniam tempore perspiciatis autem repudiandae. Iusto voluptate ullam quam dolorem! Ipsum officiis provident voluptatem illum eveniet!</p>
-         <a href="./about.html" class="btn btn-light">Read More</a>
+         <a href="./about.html" class="btn bg-light">Read More</a>
       </div>
    </section>
    <section id="features-container">
-      <div class="feature" id="feature-1">
+      <div class="feature-box" id="feature-1">
          <i class="fas fa-hotel fa-3x"></i>
          <h3>Great Location</h3>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta, ducimus?</p>
       </div>
-      <div class="feature" id="feature-2">
+      <div class="feature-box bg-color" id="feature-2">
          <i class="fas fa-utensils fa-3x"></i>
          <h3>Free Meals</h3>
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, labore!</p>
       </div>
-      <div class="feature" id="feature-3">
+      <div class="feature-box" id="feature-3">
          <i class="fas fa-dumbbell fa-3x"></i>
          <h3>Fitness Room</h3>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, mollitia?</p>
